[package]
edition.workspace    = true
name                 = "moltis-graphql"
repository.workspace = true
version.workspace    = true

[dependencies]
async-graphql = { workspace = true }
async-stream  = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tokio-stream  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
