[package]
edition.workspace = true
name              = "moltis-mcp"
version.workspace = true

[dependencies]
anyhow      = { workspace = true }
async-trait = "0.1"
futures     = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
tempfile   = "3"
tokio-test = "0.4"
