[package]
edition.workspace = true
name              = "moltis-mcp"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:moltis-metrics"]

[dependencies]
anyhow         = { workspace = true }
async-trait    = { workspace = true }
futures        = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
reqwest        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
tokio-test = { workspace = true }
