[package]
edition.workspace = true
name              = "moltis-media"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
moltis-common = { workspace = true }
reqwest       = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }

[lints]
workspace = true
