[package]
edition.workspace = true
name              = "moltis-memory"
version.workspace = true

[features]
default          = ["file-watcher"]
file-watcher     = ["dep:notify-debouncer-full"]
local-embeddings = ["dep:llama-cpp-2"]
metrics          = ["dep:moltis-metrics"]

[dependencies]
anyhow                = { workspace = true }
async-trait           = { workspace = true }
chrono                = { features = ["serde"], workspace = true }
directories.workspace = true
llama-cpp-2           = { optional = true, workspace = true }
moltis-agents         = { workspace = true }
moltis-common         = { workspace = true }
moltis-metrics        = { optional = true, workspace = true }
notify-debouncer-full = { optional = true, workspace = true }
reqwest               = { workspace = true }
secrecy               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
sha2                  = { workspace = true }
sqlx                  = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
walkdir               = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
