[package]
description       = "Metrics collection and export for moltis"
edition.workspace = true
name              = "moltis-metrics"
version.workspace = true

[dependencies]
# Metrics facade (always available for no-op when disabled)
metrics = "0.24"

# Prometheus exporter (optional)
metrics-exporter-prometheus = { optional = true, version = "0.16" }

# Tracing integration (optional)
metrics-tracing-context = { optional = true, version = "0.16" }
tracing-subscriber      = { features = ["env-filter"], optional = true, version = "0.3" }

# For histogram buckets and utilities
once_cell = "1"

# For async trait
async-trait = "0.1"

# SQLite storage (optional)
sqlx = { optional = true, workspace = true }

# Shared dependencies
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[features]
default    = []
prometheus = ["dep:metrics-exporter-prometheus"]
sqlite     = ["dep:sqlx"]
tracing    = ["dep:metrics-tracing-context", "dep:tracing-subscriber"]

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], workspace = true }

[lints]
workspace = true
