[package]
edition.workspace = true
name              = "moltis-msteams"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
async-trait     = { workspace = true }
base64          = { workspace = true }
moltis-channels = { workspace = true }
moltis-common   = { workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }
urlencoding     = { workspace = true }

[lints]
workspace = true
