[package]
edition.workspace = true
name              = "moltis-oauth"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
axum           = { workspace = true }
base64         = "0.22"
moltis-metrics = { optional = true, workspace = true }
rand           = "0.9"
reqwest        = { workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = "0.10"
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = "2.5"
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
