[package]
edition.workspace = true
name              = "moltis-onboarding"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
moltis-common = { workspace = true }
moltis-config = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
toml          = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tempfile = "3"
