[package]
edition.workspace = true
name              = "moltis-projects"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
async-trait    = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
tokio          = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
