[package]
edition.workspace    = true
name                 = "moltis-provider-setup"
repository.workspace = true
version.workspace    = true

[dependencies]
async-trait           = { workspace = true }
moltis-agents         = { workspace = true }
moltis-config         = { workspace = true }
moltis-oauth          = { workspace = true }
moltis-providers      = { workspace = true }
moltis-service-traits = { workspace = true }
reqwest               = { workspace = true }
secrecy               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
url                   = { workspace = true }

[features]
local-llm = []

[dev-dependencies]
axum     = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
