[package]
description = "QMD memory backend for moltis - optional sidecar-based hybrid search"
edition.workspace = true
name              = "moltis-qmd"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
async-trait   = "0.1"
moltis-memory = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
