[package]
edition.workspace = true
name              = "moltis-routing"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
moltis-common   = { workspace = true }
moltis-config   = { workspace = true }
moltis-sessions = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }

[lints]
workspace = true
