[package]
edition.workspace = true
name              = "moltis-routing"
version.workspace = true

[dependencies]
moltis-common   = { workspace = true }
moltis-config   = { workspace = true }
moltis-metrics  = { optional = true, workspace = true }
moltis-sessions = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
