[package]
edition.workspace    = true
name                 = "moltis-service-traits"
repository.workspace = true
version.workspace    = true

[dependencies]
async-trait = { workspace = true }
bytes       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[lints]
workspace = true
