[package]
edition.workspace    = true
name                 = "moltis-service-traits"
repository.workspace = true
version.workspace    = true

[dependencies]
async-trait     = { workspace = true }
bytes           = { workspace = true }
moltis-protocol = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }

[lints]
workspace = true
